<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="fill_parent" tools:context=".RemarkActivity"
    android:background="#ffffff"
    >

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:title="@string/app_name"
        android:background="@color/title_background_color"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="120px"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/weatherTextView"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/surfaceView"
        android:gravity="center|center_vertical|center_horizontal" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/toolbar"
        android:id="@+id/radioGroup"
        >


    </RadioGroup>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:inputType="textMultiLine"
        android:hint="@string/remark_text_hint"
        android:textColor="#000000"
        android:textColorHint="#666666"
        android:layout_below="@+id/radioGroup"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/addressEditText"
        android:inputType="textMultiLine"
        android:hint="@string/remark_text_hint"
        android:textColor="#000000"
        android:textColorHint="#666666"
        android:layout_below="@+id/editText"
        android:visibility="invisible"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remark_button_start"
        android:id="@+id/recordButton"
        android:layout_below="@+id/addressEditText"
         />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remark_button_play"
        android:id="@+id/playButton"
        android:layout_below="@+id/addressEditText"
        android:layout_toEndOf="@+id/recordButton"
        android:enabled="false" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="120px"
        android:text="@string/remark_button_submit"
        android:id="@+id/submitButton"
        android:layout_marginBottom="132dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textSize="38px" />
</RelativeLayout>
